[package]
name = "esp-test"
version = "0.1.0"
authors = ["onestacked <chrisi.schrefl@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.17.0", features = [
    "esp32",
    "embassy",
    "embassy-executor-thread",
    "embassy-time-timg0",
    "psram-4m",
] }
esp-backtrace = { version = "0.11.1", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.9.1", features = ["esp32", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.3.0" }
esp-wifi = { version = "0.5.1", features = [
    "esp32",
    "embassy-net",
    "wifi",
    "utils",
    "tcp",
    "udp",
    "icmp",
    "ipv4",
    "dhcpv4",
    "dns",
] }

embassy-net = { version = "0.4", features = ["tcp", "udp", "dhcpv4"] }

embassy-executor = { version = "0.5", features = [
    "integrated-timers",
    "nightly",
] }
embassy-time = "0.3.0"
embedded-io = "0.6.1"
heapless = { version = "0.8.0", default-features = false }
critical-section = "1.1.2"
picoserve = { version = "0.10.2", features = ["embassy", "log"] }
toml-cfg = "0.2.0"

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
#debug = 2
#strip = "debuginfo"
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
